tests/baselines/reference/propertiesAndIndexers2.errors.txt
tests/cases/compiler/propertiesAndIndexers2.ts(2,5): error TS2413: Numeric index type '文字' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers2.ts(8,5): error TS2411: Property 'c' of type '文字' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers2.ts(9,5): error TS2411: Property '3' of type '文字' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers2.ts(10,5): error TS2411: Property 'Infinity' of type '文字' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers2.ts(11,5): error TS2411: Property '"-Infinity"' of type '文字' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers2.ts(12,5): error TS2411: Property 'NaN' of type '文字' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers2.ts(13,5): error TS2411: Property '"-NaN"' of type '文字' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers2.ts(14,5): error TS2411: Property '6' of type '() => 文字' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers2.ts(14,5): error TS2412: Property '6' of type '() => 文字' is not assignable to numeric index type '文字'.


==== tests/cases/compiler/propertiesAndIndexers2.ts (9 errors) ====
    interface A {
        [n: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2413: Numeric index type '文字' is not assignable to string index type '数字'.
        [s: string]: number;
    }
    
    // All of these should fail.
    interface B extends A {
        c: string;
        ~~~~~~~~~~
!!! error TS2411: Property 'c' of type '文字' is not assignable to string index type '数字'.
        3: string;
        ~~~~~~~~~~
!!! error TS2411: Property '3' of type '文字' is not assignable to string index type '数字'.
        Infinity: string;
        ~~~~~~~~~~~~~~~~~
!!! error TS2411: Property 'Infinity' of type '文字' is not assignable to string index type '数字'.
        "-Infinity": string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2411: Property '"-Infinity"' of type '文字' is not assignable to string index type '数字'.
        NaN: string;
        ~~~~~~~~~~~~
!!! error TS2411: Property 'NaN' of type '文字' is not assignable to string index type '数字'.
        "-NaN": string;
        ~~~~~~~~~~~~~~~
!!! error TS2411: Property '"-NaN"' of type '文字' is not assignable to string index type '数字'.
        6(): string;
        ~~~~~~~~~~~~
!!! error TS2411: Property '6' of type '() => 文字' is not assignable to string index type '数字'.
        ~~~~~~~~~~~~
!!! error TS2412: Property '6' of type '() => 文字' is not assignable to numeric index type '文字'.
    }
    